--- a/grid.css
+++ b/grid.css
@@ -1,24 +1,53 @@
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
+}
+body{
+    background-color: black;
 }
 
-
 .container{
+    max-width: 1440px;
+    margin: 40px auto;
+    padding: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    border: 2px solid green;
 }
-.card{
-    margin: 30px;
-    font-size: 40px;
+.card--dog{
+    background: white;
+    border-radius: 10px;
     padding: 50px;
-    background: red;
+   
+    
+}
+img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+header{
+    display: flex;
+    align-items: center;
+}
+.ptext{
+    font-size: 1rem;
+}
+.text h3{
+    font-size: 2rem;
     
 }
 
+.text p{
+    font-size: 2rem;
+    opacity: 50%;
+
+}
 @media (max-width: 768px){
     .container{
         grid-template-columns: repeat(2, 1fr);
@@ -27,5 +56,6 @@
 @media (max-width: 425px){
     .container{
         grid-template-columns: 1fr;
+        margin: 20px;
     }
 }
